--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
-body, .card{
-     background-color: rgb(2, 2, 37);
+body,
+.card {
+     background-color: rgb(214, 214, 223);
      height: 100vh;
      width: 100%;
 }
-h1,h2,h5,p{
-     color: aliceblue;
+
+h1,
+h2,
+h5,
+p {
+     color: rgb(21, 23, 25);
 }
 
 .checked {
@@ -14,7 +19,7 @@ h1,h2,h5,p{
 .btn {
      background-color: rgb(2, 21, 40);
      border: none;
-     color: white;
+     color: rgb(138, 128, 128);
      padding: 12px 30px;
      cursor: pointer;
      font-size: 20px;
@@ -24,6 +29,7 @@ h1,h2,h5,p{
 .btn:hover {
      background-color: rgb(237, 1, 1);
 }
-.card-body{
+
+.card-body {
      border: 50px;
 }
