--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.card{
+    @apply bg-white rounded overflow-hidden shadow-md relative;
+  }
+
+.badge{
+    @apply bg-gray-400 text-gray-700 rounded-full font-bold uppercase text-xs p-2 absolute top-0 ml-2 mt-2
+}
